<resources>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="back">Zpět</string>
    <string name="app_name" translatable="false">Warehouse + Inventory Manager</string>
    <string name="loginLable">Přihlášení</string>
    <string name="emailLable">E-mail</string>
    <string name="emailHint">jan.novak@domena.cz</string>
    <string name="passwordLable">Heslo</string>
    <string name="passwordLableCheck">Heslo znovu</string>
    <string name="passwordHint" translatable="false">123456</string>
    <string name="loginButtonText">Přihlásit</string>
    <string name="loginDontHaveAccount">Nemáte účet?</string>
    <string name="loginRegisterText">Registrovat.</string>
    <string name="RegisterLable">Vytvořit účet</string>
    <string name="RegisterButtonText">Registrovat</string>
    <string name="AlreadyHaveAnAccount">Už máte účet?</string>
    <string name="ActivityRegister_LoginText">Přihlašte se.</string>
    <string name="RegistrationSuccessful">Registrace byla úspěšná</string>
    <string name="emptyPassword">Heslo nemůže být prázdné!</string>
    <string name="emptyEmail">E-mail nemůže být prázdný!</string>
    <string name="emptyEmailCheck">Potvrzení hesla nemůže být prázdné!</string>
    <string name="invalidEmailFormat">Zadaný e-mail je ve špatném formátu!</string>
    <string name="invalidPassword">Hesla se neshodují nebo není splněna podmínka na minimální délku hesla 6 znaků!</string>
    <string name="LoginSuccessful">Přihlášení proběhlo úspěšně!</string>
    <string name="LoginWithSocials">Přihlášení pomocí sociálních sítí</string>
    <string name="title_choose_image_provider">Zvolit</string>
    <string name="action_cancel">Zrušit</string>
    <string name="title_gallery">Galerie</string>
    <string name="title_camera">Kamera</string>
    <string name="message_gallery_permission_denied">K výběru obrázku je potřeba oprávnění k přístupu k externímu úložišti. Zapněte požadované oprávnění v části Nastavení > Oprávnění.</string>
    <string name="message_camera_permission_denied">K pořízení obrázku je potřeba oprávnění fotoaparátu a externího úložiště. Vypnutí jakéhokoli  z těchto oprávnění znemožní hladký chod aplikace. Zapněte všechna požadovaná oprávnění v části Nastavení > Oprávnění.</string>
    <string name="permission_gallery_denied">
        <![CDATA[Storage permission is needed to pick gallery image. Please allow storage permission from Settings > Permissions.]]></string>
    <string name="permission_camera_extended_denied">
        <![CDATA[Camera and Storage permissions are needed to take a picture. Please allow both the requested permissions from Settings > Permissions.]]></string>
    <string name="permission_camera_denied">
        <![CDATA[Storage permission is needed to take a picture. Please allow storage permission from Settings > Permissions.]]></string>
    <string name="error_failed_to_create_camera_image_file">Nepodařilo se vytvořit soubor obrazu kamery</string>
    <string name="error_failed_pick_gallery_image">Nepodařilo se vybrat obrázek galerie</string>
    <string name="error_failed_to_crop_image">Oříznutí obrázku se nezdařilo</string>
    <string name="error_failed_to_compress_image">Obrázek se nepodařilo zkomprimovat</string>
    <string name="error_task_cancelled">Úkol zrušen</string>
    <string name="error_camera_app_not_found">Aplikace fotoaparátu nebyla nalezena</string>
    <string name="hello_blank_fragment">Dobrý den, prázdný fragment</string>
    <string name="LoggingOut">Odhlašovaní…</string>
    <string name="Dashboard">Nástěnka</string>
    <string name="Settings">Nastavení</string>
    <string name="logout">Odhlásit</string>
    <string name="open">Open</string>
    <string name="close">Zavřít</string>
    <string name="edit_profile">Upravit Profil</string>
    <string name="type_in_name">Toto pole nemůže být prázdné!</string>
    <string name="note_to_long">Přesahuje povolený počet znaků!</string>
    <string name="mail_is_not_in_form">E-mail je ve špatém tvaru!</string>
    <string name="password_must_have">"Heslo musí být alspoň "</string>
    <string name="number_of_characters">" znaků dlouhé!"</string>
    <string name="password_not_same">Hesla musí být stejná!</string>
    <string name="nameLable">Celé jméno</string>
    <string name="RegistrationSuccess">Registrace proběhla úspěšně!</string>
    <string name="drawerMenu_other">Ostatní</string>
    <string name="drawerMenu_warehouses">Sklady</string>
    <string name="drawerMenu_sharedWarehouses">Ostatní sklady</string>
    <string name="drawerMenu_ownWarehouses">Mé sklady</string>
    <string name="drawerMenu_warehouseInvitationsRecieved">Obdržené pozvánky</string>
    <string name="drawerMenu_notification">Notifikace</string>
    <string name="drawerMenu_help">Nápověda</string>
    <string name="ownWarehouses">Mé sklady</string>
    <string name="warehouse_name">Jméno skladu</string>
    <string name="CreateNewWarehouse">Založit nový sklad</string>
    <string name="makeNewWarehouse">Založit sklad</string>
    <string name="Note">Poznámka</string>
    <string name="warehouseName">Název skladu</string>
    <string name="Canceled">Ukončeno</string>
    <string name="warehouseCreated">Sklad vytvořen.</string>
    <string name="warehouse_was_deleted">Sklad byl odstraněn!</string>
    <string name="restore">Obnovit</string>
    <string name="item_name">Jméno položky</string>
    <string name="item_detail">Detail položky</string>
    <string name="leave_warehouse_title">Opustit sklad?</string>
    <string name="leave_warehouse_description">"Pokud opustíte sklad, tak k němu ztratíte přístup. Jeho vlastník vás do něj ovšem bude moci znovu pozvat.\n\nOpravdu chcete sklad opustit?"</string>
    <string name="delete_warehouse_title">Odstranit sklad?</string>
    <string name="delete_warehouse_description">Odstraněním skladu odstraníte také všechny položky v něm umístěné.\n\nOpravdu chcete sklad odstranit?</string>
    <string name="you_left_the_warehouse">Opustili jste sklad!</string>
    <string name="edit_warehouse">Upravit sklad</string>
    <string name="scanningSpeedLabel">"Časový limit mezi snímaním: "</string>
    <string name="secondsLongFormat">"sekund."</string>
    <string name="secondsShotFormat" translatable="false">"s."</string>
    <string name="scanContinuously">Snímat nepřetržitě</string>
    <string name="needsCameraPermission">Aplikace potřebuje získat povolení ke kameře, abyste mohli využívat funkci skenneru.</string>
    <string name="addItem">Přidat</string>
    <string name="removeItem">Odebrat</string>
    <string name="create">Vytvořit</string>
    <string name="edit">Upravit</string>
    <string name="scanBarcode">Naskenujte čárový kód</string>
    <string name="itemAdded">Položka přidána.</string>
    <string name="itemRemoved">Položka odebrána.</string>
    <string name="chooseItem">Vyberte položku</string>
    <string name="enterBarcode">Zadejte čárový kód</string>
    <string name="insertCountOfAddedItems">Zadejte počet přidávaných kusů</string>
    <string name="enterInitialNumberOfItems">Zadejte počáteční počet kusů</string>
    <string name="enterItemPrice">Zadejte cenu za jednotku</string>
    <string name="enterItemName">Zadejte název položky</string>
    <string name="typeInValueGraterOrEqualToZero">Zadejte hodnotu větší nebo rovnou nule!</string>
    <string name="newItemWasCreated">Vytvořena nová položka skladu.</string>
    <string name="initialQuantity">"Počáteční množství: "</string>
    <string name="editItem">Upravit položku</string>
    <string name="CreateNewItem">Vytvořit novou položku</string>
    <string name="itemWithZhisNameAlreadyExists">Položka s tímto názvem již na skladě existuje. Zadejte prosím unikátní název položky.</string>
    <string name="itemWithThisBarcodeAreadyExistsPart1">"Pod tímto čárovým kódem již máte vedenou položku: "</string>
    <string name="itemWithThisBarcodeAreadyExistsPart2">. Zadejte prosím unikátní čárový kód.</string>
    <string name="itemHasAnyNote">Položka nemá vyplněnou poznámku.</string>
    <string name="editItemsInfo">Upravit informace o položce</string>
    <string name="deleteItem">Odstranit položku</string>
    <string name="itemLog">Log položky</string>
    <string name="numberOfPcsInWarehouse">Počet kusů na skladě</string>
    <string name="deleteItemQuestion">Odstranit pložku?</string>
    <string name="itemWasRemoved">Položka byla odstraněna!</string>
    <string name="deleteItemQuestionWarning">Odstraněním položky k ní ztratíte přístup nejen vy, ale i všichni ostatní lidé v tomto skladu. \n \n Opravdu si přejete položku odstranit?</string>
    <string name="warehouseLog">Log skladu</string>
    <string name="typeInValueGraterThenZero">Zadejte hodnotu větší než nula!</string>
    <string name="isInvitingYouToJoinWarehouse">Vás zve abyste se připojili ke skladu:</string>
    <string name="decline">Odmítnout</string>
    <string name="accept">Přijmout</string>
    <string name="peopleInThisWarehouse">Lidé v tomto skladu</string>
    <string name="leaveWarehouse">Opustit sklad</string>
    <string name="editInfoAboutWarehouse">Upravit informace o skladu</string>
    <string name="PeopleInThisWarehouse">Lidé v tomto skladu</string>
    <string name="logOfWarehouse">Log skladu</string>
    <string name="deleteWarehouse">Odstranit sklad</string>
    <string name="warehouseInvitations">Pozvánky do skladů</string>
    <string name="nameSurname">Jméno příjmení</string>
    <string name="owner">Vlastník</string>
    <string name="OtherPeopleInWarehouse">Ostatní lidé ve skladu</string>
    <string name="inviteUserIntoWarehouse">Pozvat uživatele do skladu</string>
    <string name="whoToInvite">Koho chcete pozvat?</string>
    <string name="enterEmailOfTheUser">Zadejte e-mail uživatele</string>
    <string name="userWithThisEmailDoesntExists">Uživatele s tímto emailem neevidujeme v naší databázi.</string>
    <string name="userIsAlreadyMemberOfThisWh">Uživatel s tímto emailem je již členem tohoto skladu.</string>
    <string name="notifications">Notifikace</string>
    <string name="help">Nápověda</string>
    <string name="settings">Nastavení</string>
    <string name="sharedWarehouses">Ostatní sklady</string>
    <string name="changePassword">Změnit heslo</string>
    <string name="changeEmail">Změnit e-mail</string>
    <string name="changeName">Změnit jméno</string>
    <string name="changeProfileImage">Změnit profilovou fotku</string>
    <string name="fillInTheseFieldsToChangePassword">Pro změnu hesla vyplňte prosím tato pole:</string>
    <string name="enterCurrentEmail">Zadejte současný e-mail</string>
    <string name="enterCurrentPassword">Zadejte současné heslo</string>
    <string name="enterNewPassword">Zadejte nové heslo</string>
    <string name="enterNewPasswordAgain">Znovu zadejte nové heslo</string>
    <string name="passwordWasChanged">Heslo bylo změněno.</string>
    <string name="enterNewEmail">Zadejte nový e-mail</string>
    <string name="fillInTheseFieldsToChangeEmail">Pro změnu e-mailu vyplňte prosím tato pole:</string>
    <string name="passwordCanNotBeEmpty">Heslo nemůže být prázdné</string>
    <string name="EnteredPasswordIsNotRight">Zadané heslo není správné</string>
    <string name="ThisIsNotEmailAccountConnectedToThisUserAccount">Toto není e-mail přidružený k tomuto účtu</string>
    <string name="passwordsDoNotMatch">Hesla se neshodují</string>
    <string name="thisFieldCanNotBeEmpty">Toto pole nemůže být prázdné.</string>
    <string name="EnterNewName">Zadejte nové jméno</string>
    <string name="fillInTheseFieldsToChangeName">Pro změnu jména vyplňte prosím toto pole:</string>
    <string name="emailWasChanged">E-mail byl změněn.</string>
    <string name="nameWasChanged">Jméno bylo změněno</string>
    <string name="enterRegistrationEmail">Zadejte registrační e-mail</string>
    <string name="resetPassword">Resetovat heslo</string>
    <string name="cancel">Zrušit</string>
</resources>