<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_dashboard"
        android:checkableBehavior="single">
        <item
            android:id="@+id/dashboardFragment"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/Dashboard" />

    </group>

    <!--<item android:title="@string/drawerMenu_warehouses">
        <menu>-->
            <group
                android:id="@+id/group_warehouses"
                android:checkableBehavior="single">
            <item
                android:id="@+id/action_global_ownWarehouseFragment_true"
                android:icon="@drawable/ic_ownwarehouse"
                android:title="@string/drawerMenu_ownWarehouses" />
            <item
                android:id="@+id/action_global_ownWarehouseFragment_false"
                android:icon="@drawable/ic_sharedwarehouse"
                android:title="@string/drawerMenu_sharedWarehouses"
                />
            <item
                android:id="@+id/warehouseInvitationFragment"
                android:icon="@drawable/ic_warehousenotification"
                android:title="@string/drawerMenu_warehouseInvitations" />
            <item
                android:id="@+id/notificationFragment"
                android:icon="@drawable/ic_notification"
                android:title="@string/drawerMenu_notification" />
            </group>
            <!--</menu>
        </item>-->

        <!--<item android:title="@string/drawerMenu_other">
            <menu>-->
            <group
                android:id="@+id/group_other"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/settingsFragment"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/Settings" />
                <item
                    android:id="@+id/helpFragment"
                    android:icon="@drawable/ic_help"
                    android:title="@string/drawerMenu_help" />
                <item
                    android:id="@+id/menuItem_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout" />
            </group>
        <!--</menu>
    </item>-->

</menu>