<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item
        android:id="@+id/miOwnWarehouseEdit"
        android:icon="@drawable/ic_edit_item"
        android:title="@string/editInfoAboutWarehouse"
        app:showAsAction="never"/>
    <item
        android:id="@+id/miOwnWarehousePeople"
        android:icon="@drawable/ic_people"
        android:title="@string/PeopleInThisWarehouse"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/miOwnWarehouseLog"
        android:icon="@drawable/ic_log"
        android:title="@string/logOfWarehouse"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/miOwnWarehouseDelete"
        android:icon="@drawable/ic_people"
        android:title="@string/deleteWarehouse"
        app:showAsAction="never"/>


</menu>