<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="cz.pavelhanzl.warehouseinventorymanager.signInUser.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".signInUser.LoginActivity">

        <FrameLayout
            android:id="@+id/ActivityLogin_header_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/warehouse"
            android:backgroundTint="@color/lightGrayColor"
            android:backgroundTintMode="screen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/ActivityLogin_animatedLogo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                app:lottie_autoPlay="true"
                app:lottie_fileName="logoAnimation.json" />
        </FrameLayout>


        <TextView
            android:id="@+id/ActivityLogin_loginLable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"
            android:text="@string/loginLable"
            android:textAllCaps="true"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ActivityLogin_header_image" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityLogin_email"
            app:errorEnabled="true"
            app:errorText="@{viewmodel.emailError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/emailLable"
            app:layout_constraintTop_toBottomOf="@id/ActivityLogin_loginLable">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityLogin_emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentColor"
                android:backgroundTint="@android:color/holo_red_light"
                android:inputType="textEmailAddress"
                android:text="@={viewmodel.emailContent}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ActivityLogin_password"
            app:errorEnabled="true"
            app:errorText="@{viewmodel.passwordError}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/passwordLable"
            app:endIconMode="password_toggle"
            app:layout_constraintTop_toBottomOf="@id/ActivityLogin_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ActivityLogin_passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/transparentColor"
                android:inputType="textPassword"
                android:text="@={viewmodel.passwordContent}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/ActivityLogin_loginButton"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/loginButtonText"
            android:textSize="17sp"
            android:textStyle="bold"
            android:onClick="@{()->viewmodel.onLoginClick()}"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ActivityLogin_password" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ActivityLogin_loginButton">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/loginDontHaveAccount" />

            <TextView
                android:id="@+id/ActivityLogin_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/loginRegisterText"
                android:textColor="@color/primaryColor"
                android:textStyle="bold"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutSocials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="8dp"
                android:text="@string/LoginWithSocials" />
        </LinearLayout>


        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutSocials" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>