<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/logoImageView_forgottenPasswordDialog"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_logo_blacktext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_forgottenPasswordDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/enterRegistrationEmail"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView_forgottenPasswordDialog">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText_forgottenPasswordDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/transparentColor"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_reset_forgottenPasswordDialog"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/resetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel_forgottenPasswordDialog"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_forgottenPasswordDialog" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel_forgottenPasswordDialog"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset_forgottenPasswordDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_forgottenPasswordDialog" />



</androidx.constraintlayout.widget.ConstraintLayout>